# Pangolin_demo

./: CMakeLists.txt  HelloPangolinOffscreen.cpp  hello.cpp  visualizeGeometry.cpp
SimpleDisplay/: main.cpp
SimpleDisplayImage/: main.cpp
SimplePlot/: CMakeLists.txt  dataset_reader.cpp  main.cpp
TrajectoryPlot/: CMakeLists.txt  main.cpp  trajectory.tum
